# U1bot

./: .deepsource.toml  .env  .gitignore  README.md  bot.py  check.py  import math.py  pyproject.toml  result.out  tempCodeRunnerFile.python  test.py
.github/workflows/: codeql.yml  main.yml
U1/: database.py  message.py
U1/utils/: request.py
nonebot_plugin_multincm/: const.py
nonebot_plugin_report_manager/: __init__.py
src/plugins/Menu/: __init__.py  dark.css  plugin.json
src/plugins/Menu/markdown/: B站视频分析.md  今天吃什么.md  今日运势.md  伪造信息.md  历史上的今天.md  回声洞.md  塔罗牌.md  天气.md  娶群友.md  成分姬.md  水群记录.md  疯狂星期四.md  答案之书.md  网抑云.md  网易云点歌.md  表情包制作.md  运行状态.md  钓鱼.md
src/plugins/Menu/template/: index.html
src/plugins/addfirend/: __init__.py
src/plugins/aichat/: __init__.py  config.py  ofa_image_process.py  utils.py
src/plugins/answersbook/: __init__.py
src/plugins/cave/: __init__.py  import json.py  models.py  tool.py
src/plugins/chatcout/: __init__.py  config.py  models.py
src/plugins/ddcheck/: __init__.py  config.py  data_source.py
src/plugins/ddcheck/template/: info.html
src/plugins/fakerinfo/: __init__.py
src/plugins/fishing/: data_source.py  models.py
src/plugins/morning/: config.py  data_source.py  models.py  utils.py  xx__init__.py
src/plugins/ncm/: __init__.py  config.py  data_source.py
src/plugins/ncm_saying/: __init__.py
src/plugins/nonebot_plugin_addFriend/: __init__.py  config.json  configUtil.py  num.json  num.txt  requestor.json  utils.py
src/plugins/nonebot_plugin_analysis_bilibili/: __init__.py  analysis_bilibili.py  models.py
src/plugins/nonebot_plugin_anime_trace/: __init__.py  config.py
src/plugins/nonebot_plugin_charpic/: __init__.py  data_source.py
src/plugins/nonebot_plugin_crazy_thursday/: __init__.py  config.py  post.json
src/plugins/nonebot_plugin_fishing/: __init__.py  config.py  data_source.py  fish_weight = {.py  model.py  models.py
src/plugins/nonebot_plugin_fishing/migrations/: 132fd421135_update_version copy.py  68463f3e5f33_.py  68463f3e5f33_update_version.py  7609e6d106dd_init_db.py  aslfjlas132412_update_version.py  da5a91612ef2_init_db.py
src/plugins/nonebot_plugin_githubcard/: __init__.py  config.py  data_source.py
src/plugins/nonebot_plugin_heweather/: __init__.py  config.py  model.py  render_pic.py  weather_data.py
src/plugins/nonebot_plugin_heweather/templates/css/: weather.css
src/plugins/nonebot_plugin_multincm/: __init__.py
src/plugins/nonebot_plugin_multincm/interaction/commands/: direct.py  lyric.py  resolve.py  search.py  upload.py
src/plugins/nonebot_plugin_picstatus/: __init__.py
src/plugins/nonebot_plugin_picstatus/templates/default/res/css/: index.css
src/plugins/nonebot_plugin_picstatus/templates/default/res/templates/: index.html.jinja  macros.html.jinja
src/plugins/nonebot_plugin_report_manager/: __init__.py  blacklist.py
src/plugins/nonebot_plugin_setu_now/: __init__.py  config.py  data_source.py  database.py  img_utils.py  utils.py
src/plugins/nonebot_plugin_setu_now/aioutils/: _main.py
src/plugins/nonebot_plugin_status/: __init__.py  common.py  config.py  data_source.py  onebot_v11.py
src/plugins/nonebot_plugin_tarot/: __init__.py
src/plugins/nonebot_plugin_wordcloud/: __init__.py  compat.py  config.py  data_source.py  model.py  schedule.py  utils.py
src/plugins/nonebot_plugin_wordcloud/migrations/: ade8cdca5470_migrate_datastore_data.py
src/plugins/removegroup/: __init__.py
src/plugins/saucenao/: __init__.py  config.py  data_source.py  import requests.py  models.py
src/plugins/tarot/: __init__.py  config.py  data_source.py
src/plugins/today_in_history/: __init__.py  config.py
src/plugins/today_yunshi/: Fortune.json  Fortune_spea.json  __init__.py  models.py
src/plugins/waifu/: __init__.py  models.py  utils.py
src/plugins/whateat_pic/: __init__.py  check_pass.py  config.py
