[tool.poetry]
name = "u1bot"
version = "0.1.0"
description = ""
authors = ["wling-art <wlingzhenyu@163.com>"]
readme = "README.md"
[tool.nonebot]
adapters = [
    { name = "OneBot V11", module_name = "nonebot.adapters.onebot.v11" },
]
plugins = [
    "nonebot_plugin_datastore",
    "nonebot_plugin_apscheduler",
    "nonebot_plugin_htmlrender",
    "nonebot_plugin_alconna",
    "nonebot_plugin_tortoise_orm",
    "nonebot_plugin_cesaa",
    "nonebot_plugin_memes_api",
    "nonebot_plugin_localstore",
    "nonebot_plugin_session",
    "nonebot_plugin_saa",
    "nonebot_plugin_orm",
]
plugin_dirs = ["src/plugins"]
builtin_plugins = []


[tool.poetry.dependencies]
python = "^3.12"
nonebot-plugin-datastore = "^1.1.2"
nonebot-plugin-tortoise-orm = "^0.1.1"
nonebot-plugin-apscheduler = "^0.5.0"
nonebot-plugin-htmlrender = "^0.3.3"
pil-utils = "^0.1.10"
ujson = "^5.10.0"
httpx = "^0.27.0"
faker = "^26.0.0"
requests = "^2.31.0"
qrcode = "^7.4.2"
aiofile = "^3.8.8"
aiohttp = "^3.9.1"
pyncm = "^1.6.13"
tinydb = "^4.8.0"
jieba = "^0.42.1"
emoji = "^2.9.0"
wordcloud = "^1.9.3"
imageio = "^2.33.1"
pillow = "^10.2.0"
humanize = "^4.9.0"
psutil = "^5.9.7"
aiomysql = "^0.2.0"
sqlalchemy = "^2.0.31"
nonebot-plugin-orm = "^0.7.5"
snakeviz = "^2.2.0"
bilireq = "^0.2.12"
nonebot2 = { extras = ["quart"], version = "^2.3.2" }
starlette = "^0.37.2"
h11 = "^0.14.0"
websockets = "^12.0"
nonebot-adapter-onebot = "^2.4.3"
nonebot-plugin-eventexpiry = "^0.1.1"
jieba-fast = "^0.53"
nonebot-plugin-memes-api = "^0.3.2"
nonebot-plugin-send-anything-anywhere = "^0.6.1"
nonebot-plugin-cesaa = "^0.4.0"
nonebot-plugin-session = "^0.3.1"
nonebot-plugin-session-orm = "^0.2.0"

[tool.poetry.group.test.dependencies]
pytest-asyncio = "^0.23.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[[tool.poetry.source]]
name = "ali"
url = "https://mirrors.aliyun.com/pypi/simple/"
priority = "primary"


[[tool.poetry.source]]
name = "tencent"
url = "https://mirrors.cloud.tencent.com/pypi/simple/"
priority = "primary"

[[tool.poetry.source]]
name = "tsinghua"
url = "https://mirrors.tuna.tsinghua.edu.cn/pypi/web/simple/"
priority = "default"
