[tool.poetry]
name = "u1bot"
version = "0.1.0"
description = ""
authors = ["wling-art <wlingzhenyu@163.com>"]
readme = "README.md"
[tool.nonebot]
adapters = [
    { name = "OneBot V11", module_name = "nonebot.adapters.onebot.v11" },
]
plugins = [
    "nonebot_plugin_datastore",
    "nonebot_plugin_apscheduler",
    "nonebot_plugin_htmlrender",
    "nonebot_plugin_alconna",
    "nonebot_plugin_tortoise_orm",
    "nonebot_plugin_cesaa",
    # "nonebot_plugin_memes_api",
    "nonebot_plugin_localstore",
    "nonebot_plugin_session",
    "nonebot_plugin_saa",
    "nonebot_plugin_orm",
]
plugin_dirs = ["src/plugins"]
builtin_plugins = []


[tool.poetry.dependencies]
python = "^3.10"
nonebot-plugin-datastore = "^1.3.0"
nonebot-plugin-tortoise-orm = "^0.1.4"
nonebot-plugin-apscheduler = "^0.5.0"
nonebot-plugin-htmlrender = "^0.3.5"
pil-utils = "^0.1.12"
ujson = "^5.10.0"
httpx = "^0.27.0"
faker = "^28.4.1"
requests = "^2.32.3"
qrcode = "^7.4.2"
aiofile = "^3.8.8"
aiohttp = "^3.10.5"
pyncm = "^1.6.16"
tinydb = "^4.8.0"
jieba = "^0.42.1"
emoji = "^2.12.1"
wordcloud = "^1.9.3"
imageio = "^2.35.1"
pillow = "^10.4.0"
humanize = "^4.10.0"
psutil = "^6.0.0"
aiomysql = "^0.2.0"
sqlalchemy = "^2.0.34"
nonebot-plugin-orm = "^0.7.6"
snakeviz = "^2.2.0"
bilireq = "^0.2.13"
nonebot2 = { extras = ["quart"], version = "^2.3.3" }
starlette = "^0.37.2"
h11 = "^0.14.0"
websockets = "^13.0.1"
nonebot-adapter-onebot = "^2.4.4"
nonebot-plugin-eventexpiry = "^0.1.1"
jieba-fast = "^0.53"
nonebot-plugin-send-anything-anywhere = "^0.7.1"
nonebot-plugin-cesaa = "^0.4.1"
nonebot-plugin-session = "^0.3.2"
nonebot-plugin-session-orm = "^0.2.0"
aiocache = "^0.12.2"

cookit = "^0.6.7"
nonebot-plugin-alconna = "^0.52.2"
cachetools = "^5.5.0"
torch = "^2.4.1"
torchvision = "^0.19.1"
torchaudio = "^2.4.1"
addict = "^2.4.0"
oss2 = "^2.19.0"
modelscope = "1.18"
librosa = "^0.10.2.post1"
setuptools = "^75.1.0"
datasets = "2.21.0"
simplejson = "^3.19.3"
sortedcontainers = "^2.4.0"
open-clip-torch = "^2.26.1"
transformers = "^4.44.2"
fairseq = {git = "https://github.com/Tps-F/fairseq.git", rev = "main"}
unicodedata2 = "^15.1.0"
zhconv = "^1.4.3"
rapidfuzz = "^3.9.7"
decord = "^0.6.0"
tensorboardx = "^2.6.2.2"
cnocr = "^2.3.0.3"
[tool.poetry.group.test.dependencies]
pytest-asyncio = "^0.23.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[[tool.poetry.source]]
name = "ali"
url = "https://mirrors.aliyun.com/pypi/simple/"
priority = "primary"


[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = [
    "F",     # Pyflakes
    "W",     # pycodestyle warnings
    "E",     # pycodestyle errors
    "UP",    # pyupgrade
    "ASYNC", # flake8-async
    "C4",    # flake8-comprehensions
    "T10",   # flake8-debugger
    "PYI",   # flake8-pyi
    "PT",    # flake8-pytest-style
    "Q",     # flake8-quotes
    "RUF",   # Ruff-specific rules
]
ignore = [
    "E402",   # module-import-not-at-top-of-file
    "E501",   # line-too-long
    "UP037",  # quoted-annotation
    "RUF001", # ambiguous-unicode-character-string
    "RUF002", # ambiguous-unicode-character-docstring
    "RUF003", # ambiguous-unicode-character-comment
]

[tool.pyright]
typeCheckingMode = "basic"
