[tool.poetry]
name = "u1bot"
version = "0.1.0"
description = ""
authors = ["wling-art <wlingzhenyu@163.com>"]
readme = "README.md"
[tool.nonebot]
adapters = [
    { name = "OneBot V11", module_name = "nonebot.adapters.onebot.v11" },
]
plugins = [
    "nonebot_plugin_apscheduler",
    "nonebot_plugin_htmlrender",
    "nonebot_plugin_alconna",
    "nonebot_plugin_tortoise_orm",
]
plugin_dirs = ["src/plugins"]
builtin_plugins = []


[tool.poetry.dependencies]
python = "^3.10"
nonebot2 = { extras = ["fastapi"], version = "^2.4.0" }
nonebot-plugin-tortoise-orm = "^0.1.4"
nonebot-plugin-apscheduler = "^0.5.0"
nonebot-plugin-htmlrender = "^0.4.0"


nonebot-adapter-onebot = "^2.4.6"
nonebot-plugin-userinfo = "^0.2.6"
cnocr = "^2.3.0"
openai = "^1.54.3"
aiohttp = "^3.10.0"
pil-utils = "^0.2.1"
ujson = "^5.10.0"
nonebot-plugin-alconna = "^0.53.1"
aiocache = "^0.12.3"
faker = "^30.8.2"
cookit = "^0.8.1"
bilireq = "^0.2.13"
pyncm = "^1.6.17"
[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[[tool.poetry.source]]
name = "ali"
url = "https://mirrors.aliyun.com/pypi/simple/"
priority = "primary"


[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = [
    "F",     # Pyflakes
    "W",     # pycodestyle warnings
    "E",     # pycodestyle errors
    "UP",    # pyupgrade
    "ASYNC", # flake8-async
    "C4",    # flake8-comprehensions
    "T10",   # flake8-debugger
    "PYI",   # flake8-pyi
    "PT",    # flake8-pytest-style
    "Q",     # flake8-quotes
    "RUF",   # Ruff-specific rules
]
ignore = [
    "E402",   # module-import-not-at-top-of-file
    "E501",   # line-too-long
    "UP037",  # quoted-annotation
    "RUF001", # ambiguous-unicode-character-string
    "RUF002", # ambiguous-unicode-character-docstring
    "RUF003", # ambiguous-unicode-character-comment
]

[tool.pyright]
typeCheckingMode = "basic"
